# nexus

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  docker-compose.yml
apps/desktop/: pubspec.yaml
apps/desktop/lib/: main.dart
apps/mobile/: pubspec.yaml
crates/crypto/: Cargo.toml
crates/crypto/src/: encryption.rs  key_exchange.rs  lib.rs  signatures.rs
crates/filesystem/: Cargo.toml
crates/filesystem/src/: lib.rs  operations.rs  permissions.rs
crates/networking/: Cargo.toml
crates/networking/src/: lib.rs  p2p.rs  stun_client.rs
crates/sync-engine/: Cargo.toml
crates/sync-engine/examples/: watch-folder.rs
crates/sync-engine/src/: chunker.rs  hasher.rs  ignore.rs  lib.rs  watcher.rs
extensions/vscode/: package.json
extensions/vscode/src/: extension.ts
services/coordinator/: Dockerfile  go.mod  main.go
services/coordinator/migrations/: 001_initial.sql
